# autoware.universe

.github/: CODEOWNERS
common/motion_utils/src/resample/: resample.cpp
latest/: sitemap.xml
launch/tier4_localization_launch/launch/pose_estimator/: pose_estimator.launch.xml
launch/tier4_planning_launch/config/scenario_planning/lane_driving/motion_planning/obstacle_avoidance_planner/: obstacle_avoidance_planner.param.yaml
localization/lidar_feature_extraction/: CMakeLists.txt
localization/lidar_feature_extraction/app/: feature_extraction.cpp
localization/lidar_feature_extraction/include/lidar_feature_extraction/: point_label.hpp
localization/lidar_feature_extraction/launch/: lidar_feature_extraction.launch.py  lidar_feature_extraction.launch.xml
localization/lidar_feature_library/include/lidar_feature_library/: eigen.hpp  qos.hpp  stats.hpp
localization/lidar_feature_library/src/: stats.cpp
localization/lidar_feature_localization/: CMakeLists.txt  README.md  package.xml
localization/lidar_feature_localization/app/: convergence.cpp  feature_extraction.cpp  localization.cpp
localization/lidar_feature_localization/config/: extraction.param.yaml
localization/lidar_feature_localization/include/lidar_feature_extraction/: edge_surface_extraction.hpp  fill.hpp  hyper_parameter.hpp  label.hpp  neighbor.hpp  occlusion.hpp
localization/lidar_feature_localization/include/lidar_feature_library/: point_type.hpp  ros_msg.hpp  warning.hpp
localization/lidar_feature_localization/include/lidar_feature_localization/: edge.hpp  jacobian.hpp  kdtree.hpp  loam_optimization_problem.hpp  localizer.hpp  subscriber.hpp  surface.hpp
localization/lidar_feature_localization/launch/: lidar_feature_localization.launch.py  lidar_feature_localization.launch.xml
localization/lidar_feature_localization/src/: alignment.cpp  optimizer.cpp
localization/lidar_feature_localization/src/extraction/: edge_surface_extraction.cpp  label.cpp
localization/lidar_feature_localization/src/lib/: algorithm.cpp  eigen.cpp  pcl_utils.cpp  random.cpp  ros_msg.cpp
localization/lidar_feature_localization/src/localization/: edge.cpp  kdtree.cpp
localization/lidar_feature_localization/test/: test_alignment.cpp  test_jacobian.cpp  test_optimizer.cpp
localization/lidar_feature_localization/test/extraction/: test_color_points.cpp  test_curvature.cpp  test_fill.cpp  test_label.cpp  test_mapped_points.cpp  test_math.cpp  test_occlusion.cpp  test_out_of_range.cpp  test_parallel_beam.cpp  test_range.cpp  test_ring.cpp
localization/lidar_feature_localization/test/lib/: test_algorithm.cpp  test_eigen.cpp  test_numeric.cpp  test_random.cpp  test_ros_msg.cpp  test_span.cpp  test_stats.cpp
localization/lidar_feature_localization/test/localization/: test_edge.cpp  test_kdtree.cpp  test_odometry.cpp  test_robust.cpp
main/: sitemap.xml
perception/lidar_centerpoint/lib/: centerpoint_trt.cpp
perception/tensorrt_yolo/lib/include/: trt_yolo.hpp
perception/tensorrt_yolo/lib/src/: trt_yolo.cpp
perception/traffic_light_ssd_fine_detector/lib/include/: trt_ssd.hpp
perception/traffic_light_ssd_fine_detector/lib/src/: trt_ssd.cpp
perception/traffic_light_ssd_fine_detector/src/: nodelet.cpp
planning/behavior_path_planner/: README.md
planning/behavior_path_planner/include/behavior_path_planner/: utilities.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/pull_over/: pull_over_module.hpp
planning/behavior_path_planner/src/: behavior_path_planner_node.cpp  utilities.cpp
planning/behavior_path_planner/src/scene_module/pull_over/: pull_over_module.cpp
planning/obstacle_avoidance_planner/src/: node.cpp
planning/obstacle_avoidance_planner/src/utils/: cv_utils.cpp
planning/obstacle_velocity_limiter/: CMakeLists.txt
vehicle/accel_brake_map_calibrator/accel_brake_map_calibrator/: CMakeLists.txt
vehicle/accel_brake_map_calibrator/accel_brake_map_calibrator/include/accel_brake_map_calibrator/: acceleration_map_calibrator_node.hpp
vehicle/accel_brake_map_calibrator/accel_brake_map_calibrator/launch/: acceleration_map_calibrator.launch.xml
vehicle/accel_brake_map_calibrator/accel_brake_map_calibrator/src/: accel_brake_map_calibrator_node.cpp  acceleration_map_calibrator_node.cpp
